G1 ignores AlwaysPreTouch when UseTransparentHugePages is enabled

XMLWordPrintable

    • gc
    • b22
    • x86
    • linux

         A DESCRIPTION OF THE PROBLEM :
        G1 ignores AlwaysPreTouch when UseTransparentHugePages is enabled

        REGRESSION : Last worked in version 8u181

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        time java -XX:+UseG1GC -Xmx10g -Xms10g -XX:+AlwaysPreTouch -XX:+UseTransparentHugePages HelloWorld

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        Hello, World

        real 0m4.737s
        user 0m0.417s
        sys 0m4.349s
        ACTUAL -
        Hello, World

        real 0m0.418s
        user 0m0.168s
        sys 0m0.314s

        ---------- BEGIN SOURCE ----------
        public class HelloWorld {
            public static void main(String[] args) {
                System.out.println("Hello, World");
            }
        }
        ---------- END SOURCE ----------

        FREQUENCY : always


              Assignee:
              Thomas Schatzl
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: