8213927: G1 ignores AlwaysPreTouch when UseTransparentHugePages is enabled

With UseTransparentHugePages we always need to pretouch on small page size as the underlying memory could currently be allocated as either small or large pages.

Reviewed-by: shade, sjohanss